movie_template_ui/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-ui-service
  labels:
    app: movie-ui
spec:
  # Use ClusterIP for internal access (default). For cloud, change to LoadBalancer.
  type: ClusterIP
  selector:
    app: movie-ui
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
